# TestCode

./: CMakeLists.txt  checkerboard.yaml  package.xml  points_frame_a.csv  points_frame_b.csv  test.cpp  test.py
Executable/: CMakeLists.txt  test.cpp
ROS/: CMakeLists.txt  package.xml
ROS/src/: ros_test_node.cpp
ROS2/: CMakeLists.txt  package.xml
ROS2/launch/: test.launch.py
ROS2/src/: ros2_test.cpp
src/: ros_test_node.cpp
